@@ -10,24 +10,21 @@ import com.main.progamming.common.response.DataResponse;
 import com.main.progamming.common.response.ListResponse;
 import com.main.progamming.common.response.ResponseMapper;
 import com.main.progamming.common.service.BaseServiceImpl;
+import com.main.progamming.common.util.SystemUtil;
 import com.programming.courseservice.domain.dto.*;
 import com.programming.courseservice.domain.mapper.CourseIssueReportMapper;
 import com.programming.courseservice.domain.mapper.CourseMapper;
 import com.programming.courseservice.domain.persistent.entity.*;
 import com.programming.courseservice.domain.persistent.enumrate.FilterSortBy;
-import com.programming.courseservice.repository.CourseRepository;
-import com.programming.courseservice.repository.LanguageRepository;
-import com.programming.courseservice.repository.LevelRepository;
-import com.programming.courseservice.repository.TopicRepository;
-import com.programming.courseservice.utilities.constant.S3Constrant;
+import com.programming.courseservice.domain.persistent.enumrate.RatingsLevel;
+import com.programming.courseservice.domain.persistent.enumrate.VideoDuration;
+import com.programming.courseservice.repository.*;
+import com.programming.courseservice.utilities.EnumUtils;
+import com.programming.courseservice.utilities.TimeUtils;
+import com.programming.courseservice.utilities.constant.CourseConstrant;
 import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.ByteArrayResource;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
+import org.springframework.data.domain.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -38,14 +35,25 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class CourseService extends BaseServiceImpl<Course, CourseDto> {
+
     private final CourseRepository courseRepository;
+
     private final CourseMapper courseMapper;
+
     private final StorageS3Service storageS3Service;
+
     private final StorageService storageService;
+
     private final LanguageRepository languageRepository;
+
     private final TopicRepository topicRepository;
+
     private final LevelRepository levelRepository;
+
     private final CourseIssueReportMapper courseIssueReportMapper;
+
+    private final CourseReviewRepository courseReviewRepository;
+
     @Override
     protected BaseRepository<Course> getBaseRepository() {
         return courseRepository;
@@ -63,6 +71,7 @@ public class CourseService extends BaseServiceImpl<Course, CourseDto> {
         Boolean isApproved = searchKeywordDto.getKeyword().get(2) == null ? null : Boolean.valueOf(searchKeywordDto.getKeyword().get(2).trim());
         Boolean isAwaitingApproval = searchKeywordDto.getKeyword().get(3) == null ? null : Boolean.valueOf(searchKeywordDto.getKeyword().get(3).trim());
         Boolean isCompletedContent = searchKeywordDto.getKeyword().get(4) == null ? null : Boolean.valueOf(searchKeywordDto.getKeyword().get(4).trim());
+
         return courseRepository.searchCourseOfAdmin(name, creator, isApproved, isAwaitingApproval, isCompletedContent, pageable)
                 .map(course -> courseMapper.entityToDto(course));
     }
@@ -74,10 +83,11 @@ public class CourseService extends BaseServiceImpl<Course, CourseDto> {
 
     @Override
     public ListResponse<CourseDto> getAll() {
+
         return ResponseMapper.toListResponseSuccess(courseRepository.getAllCourseIsApproved()
                 .stream()
                 .map(course -> courseMapper.entityToDto(course))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     public ListResponse<List<CourseDto>> getNewestCourse(String topicId, int size) {
@@ -85,7 +95,6 @@ public class CourseService extends BaseServiceImpl<Course, CourseDto> {
         Pageable pageable = PageRequest.of(0, size, sortCourse);
 
         topicId = topicId.equals("-1") ? null : topicId;
-        System.out.println(topicId);
         List<CourseDto> courseDtos = courseRepository.getCourseByTopicId(topicId, pageable)
                 .stream()
                 .map((course -> courseMapper.entityToDto(course)))
@@ -119,29 +128,54 @@ public class CourseService extends BaseServiceImpl<Course, CourseDto> {
         List<String> languageIds = searchCourseDto.getLanguageIds() == null || searchCourseDto.getLanguageIds().isEmpty() ? languageRepository.findAll().stream().map(Language::getId).toList() : searchCourseDto.getLanguageIds();
         List<String> topicIds = searchCourseDto.getTopicIds() == null || searchCourseDto.getTopicIds().isEmpty() ? topicRepository.findAll().stream().map(Topic::getId).toList() : searchCourseDto.getTopicIds();
         Boolean isFree = searchCourseDto.getIsFree();
+        VideoDuration videoDuration = searchCourseDto.getVideoDuration();
+        RatingsLevel ratingsLevel = searchCourseDto.getRatingsLevel();
+        Float minRatingValue = EnumUtils.getMinRating(ratingsLevel);
+
         String keyword = searchCourseDto.getKeyword();
 
         Page<Course> courses = null;
         if(searchCourseDto.getFilterSortBy() != null && searchCourseDto.getFilterSortBy() == FilterSortBy.POPULAR) {
-            System.out.println("Vao day");
-            courses = courseRepository.filterCoursePopular(levelIds, languageIds, topicIds, isFree, keyword, pageable);
+            courses = courseRepository.filterCoursePopular(levelIds, languageIds, topicIds, isFree, keyword, minRatingValue, pageable);
         } else {
-            courses = courseRepository.filterCourse(levelIds, languageIds, topicIds, isFree, keyword, pageable);
+            courses = courseRepository.filterCourse(levelIds, languageIds, topicIds, isFree, minRatingValue, keyword, pageable);
         }
 
-        Page<CourseDto> courseDtos = courses.map(course -> courseMapper.entityToDto(course));
+        if (videoDuration != null) {
+            Long minVideoDuration = TimeUtils.converHoursToMilliseconds(EnumUtils.getMinVideoDurationHour(videoDuration));
+            Long maxVideoDuration = TimeUtils.converHoursToMilliseconds(EnumUtils.getMaxVideoDurationHour(videoDuration));
 
-        return ResponseMapper.toPagingResponseSuccess(courseDtos);
+            List<CourseDto> courseDtos = courses.stream()
+                    .filter(course -> {
+                        Long totalDurationVideos = course.getContent().getSections().stream()
+                                .mapToLong(Section::getTotalDurationVideoLectures)
+                                .sum();
+                        if (totalDurationVideos <= minVideoDuration || totalDurationVideos > maxVideoDuration) {
+                            return false;
+                        }
+                        return true;
+                    })
+                    .map(course -> courseMapper.entityToDto(course))
+                    .toList();
+
+            Page<CourseDto> courseDtoPage = new PageImpl<>(courseDtos, pageable, courses.getTotalElements());
+
+            return ResponseMapper.toPagingResponseSuccess(courseDtoPage);
+        }
+
+        return ResponseMapper.toPagingResponseSuccess(courses);
 
     }
 
     @Override
     public DataResponse<CourseDto> update(String id, CourseDto dto) {
         courseRepository.updateCourse(id, dto.getLevel().getId(), dto.getTopic().getId(), dto.getLanguage().getId());
+
         Optional<Course> optionalCourse = courseRepository.findById(id);
         if(optionalCourse.isEmpty()) {
-            throw new ResourceNotFoundException(id + " does not exists in DB");
+            throw new ResourceNotFoundException(CourseConstrant.ErrorConstrant.ID_NOT_FOUND);
         }
+
         Course course = optionalCourse.get();
         courseMapper.dtoToEntity(dto, course);
         course.setId(id);
@@ -150,17 +184,18 @@ public class CourseService extends BaseServiceImpl<Course, CourseDto> {
     }
 
     public DataResponse<String> uploadCourseImage(MultipartFile file) {
-        return ResponseMapper.toDataResponseSuccess(storageS3Service.uploadFile(S3Constrant.PATH_COURSE_IMAGE, file));
+        return ResponseMapper.toDataResponseSuccess(storageS3Service.uploadFile(CourseConstrant.S3Constrant.PATH_COURSE_IMAGE, file));
     }
 
     public DataResponse<String> uploadCourseVideo(MultipartFile file) {
-        return ResponseMapper.toDataResponseSuccess(storageS3Service.uploadFile(S3Constrant.PATH_COURSE_VIDEO, file));
+        return ResponseMapper.toDataResponseSuccess(storageS3Service.uploadFile(CourseConstrant.S3Constrant.PATH_COURSE_VIDEO, file));
     }
 
     public ResponseEntity<ByteArrayResource> loadFile(String path) {
         byte[] data = storageS3Service.downloadFile(path);
         byte[] dataBase64 = Base64.getEncoder().encode(data);
         ByteArrayResource resource = new ByteArrayResource(dataBase64);
+
         return ResponseEntity.ok()
                 .contentLength(dataBase64.length)
                 .header("Content-type", "application/octet-stream")
@@ -197,50 +232,63 @@ public class CourseService extends BaseServiceImpl<Course, CourseDto> {
 //    }
 
     public ListResponse<CourseDto> getCourseAccessByUserId(String userId, Integer pageIndex, Integer pageSize) {
-        Pageable pageable = PageRequest.of(pageIndex,pageSize);
+        Pageable pageable = PageRequest.of(pageIndex, pageSize);
+
         Page<Course> courses = courseRepository.getCourseAccessByUserId(userId, pageable);
-        Page<CourseDto> courseDtos = courses.map(course -> courseMapper.entityToDto(course));
+        Page<CourseDto> courseDtos = courses.map(course -> {
+            CourseDto courseDto = courseMapper.entityToDto(course);
+            CourseReview courseReview = courseReviewRepository.findCourseReviewsByUsernameAndCourseId(SystemUtil.getCurrentUsername(), course.getId());
+            if (courseReview != null) {
+                courseDto.setIsAlreadyReviewed(true);
+            }
+            return courseDto;
+        });
+
         return ResponseMapper.toPagingResponseSuccess(courseDtos);
     }
 
     public DataResponse<String> updateIsApproved(String id, boolean isApproved, CourseIssueReportDto courseIssueReportDto) {
         Optional<Course> optionalCourse = courseRepository.findById(id);
+
         if(optionalCourse.isEmpty()) {
-            throw new ResourceNotFoundException("Course doesn't exist");
+            throw new ResourceNotFoundException(CourseConstrant.ErrorConstrant.ID_NOT_FOUND);
         }
+
         Course course = optionalCourse.get();
         if(isApproved) {
             if(course.getIsCompletedContent() && course.getIsAwaitingApproval()) {
                 courseRepository.updateIsApproved(id, isApproved);
-                return ResponseMapper.toDataResponseSuccess("Update succcessful");
+                return ResponseMapper.toDataResponseSuccess(CourseConstrant.SuccessConstrant.UPDATE_SUCCESS);
             } else {
-                return ResponseMapper.toDataResponse("Content is in incompleted", StatusCode.DATA_NOT_MAP, StatusMessage.DATA_NOT_MAP);
+                return ResponseMapper.toDataResponse(CourseConstrant.ErrorConstrant.CONTENT_NOT_COMPLETE, StatusCode.DATA_NOT_MAP, StatusMessage.DATA_NOT_MAP);
             }
         } else {
             List<CourseIssueReport> courseIssueReports = course.getCourseIssueReports();
+
             CourseIssueReport courseIssueReport = courseIssueReportMapper.dtoToEntity(courseIssueReportDto);
             courseIssueReport.setCourse(course);
             courseIssueReports.add(courseIssueReport);
             courseIssueReports.forEach(System.out::println);
             course.setCourseIssueReports(courseIssueReports);
             course.setIsAwaitingApproval(false);
+
             courseRepository.save(course);
-            return ResponseMapper.toDataResponseSuccess("Update succcessful");
+            return ResponseMapper.toDataResponseSuccess(CourseConstrant.SuccessConstrant.UPDATE_SUCCESS);
         }
     }
 
     public DataResponse<String> updateAwaitingApproval(String id, boolean isAwaitingApproval) {
         Optional<Course> optionalCourse = courseRepository.findById(id);
         if(optionalCourse.isEmpty()) {
-            throw new ResourceNotFoundException("Course doesn't exist");
+            throw new ResourceNotFoundException(CourseConstrant.ErrorConstrant.ID_NOT_FOUND);
         }
         Course course = optionalCourse.get();
         if(isAwaitingApproval && !updateCompletedContent(course)) {
-            return ResponseMapper.toDataResponse("Course content is incomplete", StatusCode.DATA_NOT_MAP, StatusMessage.DATA_NOT_MAP);
+            return ResponseMapper.toDataResponse(CourseConstrant.ErrorConstrant.CONTENT_NOT_COMPLETE, StatusCode.DATA_NOT_MAP, StatusMessage.DATA_NOT_MAP);
         }
         course.setIsAwaitingApproval(isAwaitingApproval);
         courseRepository.save(course);
-        return ResponseMapper.toDataResponseSuccess("Update succcessful");
+        return ResponseMapper.toDataResponseSuccess(CourseConstrant.SuccessConstrant.UPDATE_SUCCESS);
     }
 
     public boolean updateCompletedContent(Course course) {
